--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-native": "0.71.4",
     "react-native-haptic-feedback": "^2.0.2",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-reanimated": "^3.0.2"
+    "react-native-reanimated": "^3.0.2",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
