--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "dotenv": "^16.0.3",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-haptic-feedback": "^2.0.2",
