BAC-29: minor cleanup

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,18 @@
       "type": "reactnative",
       "request": "launch",
       "platform": "ios"
+    },
+    {
+      "name": "Debug Jest Tests",
+      "type": "node",
+      "request": "launch",
+      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/jest",
+      "args": [
+        "--runInBand"
+      ],
+      "cwd": "${workspaceRoot}",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
     }
   ]
 }
